Save Feature Added

--- a/App.config
+++ b/App.config
@@ -1,6 +1,42 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Live_Netease_Music_Title.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <userSettings>
+        <Live_Netease_Music_Title.Properties.Settings>
+            <setting name="G_catchSpeed" serializeAs="String">
+                <value>2000</value>
+            </setting>
+            <setting name="G_displayColor" serializeAs="String">
+                <value>Black</value>
+            </setting>
+            <setting name="G_customBackground" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="G_customDisplayBackColor" serializeAs="String">
+                <value>Control</value>
+            </setting>
+            <setting name="G_customDisplayBackTransValue" serializeAs="String">
+                <value>100</value>
+            </setting>
+            <setting name="G_displayModeRolling" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="G_displayRollingSize" serializeAs="String">
+                <value>400</value>
+            </setting>
+            <setting name="G_topMost" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Changed" serializeAs="String">
+                <value>False</value>
+            </setting>
+        </Live_Netease_Music_Title.Properties.Settings>
+    </userSettings>
 </configuration>
